Fix missing Color

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ overflow-x: hidden;
     outline: none;
     border: none;
     background: var(--lightyellow);
-    color: #fff;
+    color: white;
     cursor: pointer;
     padding: 1rem;
     font-size: 1.7rem;
@@ -134,6 +134,7 @@ overflow-x: hidden;
     font-size: 3rem;
     display: none;
 }
+
 .home{
     min-height: 100vh;
     width: 100vw;
@@ -893,7 +894,7 @@ overflow-x: hidden;
     left: -200px;
     z-index: -1;
 }
-.navbar .dark{
+.dark{
     color: var(--black) !important;
 }
 
@@ -970,7 +971,7 @@ overflow-x: hidden;
                 flex-flow: column-reverse;
     }
     .success .row .image img{
-        max-width: 100vw;
+        max-width: 80vw;
     }
     .success .row .content{
         padding: 0;
